--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -27,9 +27,10 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+      - run: echo "jepedersen.dk" > ./__sapper__/build/CNAME
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_DEPLOY_KEY }}
-          publish_dir: ./public
+          publish_dir: ./__sapper__/build/
