--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -27,10 +27,10 @@ jobs:
       - run: npm ci
 
       - run: npm run export
-      - run: echo "jepedersen.dk" > ./__sapper__/export/sapper-v3/CNAME
+      - run: echo "jepedersen.dk" > ./__sapper__/export/CNAME
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_DEPLOY_KEY }}
-          publish_dir: ./__sapper__/export/sapper-v3/
+          publish_dir: ./__sapper__/export/
