--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
-    "export": "sapper export --legacy --basepath sapper-v3",
+    "export": "sapper export --legacy",
     "start": "sapper build && node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
