Attempted to fix export. Still not working

--- a/package.json
+++ b/package.json
@@ -1,45 +1,39 @@
 {
-  "name": "rdela-sapper-v3",
-  "description": "Sapper app starter template for v3",
-  "version": "3.0.1",
-  "author": "Ricky de Laveaga <https://rdela.com>",
-  "license": "SEE LICENSE IN license.txt",
-  "private": true,
+  "name": "jepedersen.dk",
+  "description": "Personal website",
+  "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
-    "start": "sapper build && node __sapper__/build",
+    "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "cy:verify": "cypress verify",
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
-    "compression": "1.7.4",
+    "compression": "^1.7.1",
     "katex": "^0.11.1",
-    "lighthouse": "^5.6.0",
-    "marked": "0.8.0",
-    "npm-check-updates": "^4.0.1",
+    "marked": "^1.1.0",
     "polka": "next",
-    "sirv": "0.4.2"
+    "sirv": "^0.4.0"
   },
   "devDependencies": {
-    "@babel/core": "7.8.3",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.8.3",
-    "@babel/preset-env": "7.8.3",
-    "@babel/runtime": "7.8.3",
-    "@rollup/plugin-replace": "2.3.0",
-    "cypress": "3.8.3",
-    "npm-run-all": "4.1.5",
-    "rollup": "1.30.1",
-    "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-svelte": "5.1.1",
-    "rollup-plugin-terser": "5.2.0",
-    "sapper": "0.27.9",
-    "svelte": "3.18.1"
+    "npm-run-all": "^4.1.5",
+    "sapper": "^0.27.0",
+    "svelte": "^3.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.2.0",
+    "rollup": "^2.0.0",
+    "rollup-plugin-babel": "^4.0.2",
+    "rollup-plugin-svelte": "^5.0.1",
+    "rollup-plugin-terser": "^5.3.0",
+    "npm-check-updates": "^6.0.1"
   }
 }
