--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "katex": "^0.11.1",
-    "marked": "^1.1.0",
+    "katex": "^0.13.0",
+    "marked": "^2.0.1",
     "polka": "next",
-    "sirv": "^1.0.1"
+    "sirv": "^1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.13.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
-    "@rollup/plugin-commonjs": "13.0.0",
-    "@rollup/plugin-node-resolve": "^8.1.0",
-    "@rollup/plugin-replace": "^2.3.3",
-    "npm-check-updates": "^7.0.1",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/runtime": "^7.13.10",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-replace": "^2.4.1",
+    "@rollup/plugin-url": "^6.0.0",
+    "npm-check-updates": "^11.3.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.20.0",
+    "rollup": "^2.42.1",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-svelte": "^5.2.3",
-    "rollup-plugin-terser": "^6.1.0",
-    "sapper": "^0.27.16",
-    "svelte": "^3.23.2"
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sapper": "^0.29.1",
+    "svelte": "^3.35.0"
   }
 }
