--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "katex": "^0.13.0",
+    "latex.js": "^0.12.4",
     "marked": "^2.0.1",
     "polka": "next",
     "sirv": "^1.0.11"
@@ -29,7 +30,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-url": "^6.0.0",
-    "npm-check-updates": "^11.3.0",
+    "npm-check-updates": "^12.0.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.42.1",
     "rollup-plugin-babel": "^4.4.0",
