--- a/package.json
+++ b/package.json
@@ -13,30 +13,32 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "katex": "^0.13.24",
+    "katex": "^0.15.6",
     "latex.js": "^0.12.4",
-    "marked": "^2.1.3",
+    "marked": "^4.0.16",
+    "npm-update": "^2.1.0",
+    "npm-upgrade": "^3.1.0",
     "polka": "next",
-    "sirv": "^1.0.19"
+    "sirv": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
+    "@babel/core": "^7.18.2",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/runtime": "^7.17.8",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/runtime": "^7.18.3",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-url": "^6.1.0",
-    "npm-check-updates": "^12.5.4",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-url": "^7.0.0",
+    "npm-check-updates": "^13.0.3",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.70.1",
+    "rollup": "^2.75.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.29.3",
-    "svelte": "^3.46.5"
+    "svelte": "^3.48.0"
   }
 }
