--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "compression": "^1.7.4",
     "katex": "^0.13.24",
     "latex.js": "^0.12.4",
-    "marked": "^2.1.3",
+    "marked": ">=4.0.10",
     "polka": "next",
     "sirv": "^1.0.19"
   },
